// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductTypeDetails matcha lo snapshot con descrizione 1`] = `
<DocumentFragment>
  <div
    class="border rounded p-4 bg-gray-50 mb-2"
  >
    <div>
      <b>
        Nome:
      </b>
       Tipo Test
    </div>
    <div>
      <b>
        ID:
      </b>
       1234
    </div>
    <div>
      <b>
        Descrizione:
      </b>
       Descrizione test
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductTypeDetails matcha lo snapshot senza descrizione 1`] = `
<DocumentFragment>
  <div
    class="border rounded p-4 bg-gray-50 mb-2"
  >
    <div>
      <b>
        Nome:
      </b>
       No Desc
    </div>
    <div>
      <b>
        ID:
      </b>
       5678
    </div>
  </div>
</DocumentFragment>
`;
